--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mui-task",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://hrynkevych.github.io/my-app",
+  "homepage": ".",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
